// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should return correctly with name 1`] = `
"declare enum E {
}"
`;

exports[`should return correctly with name, const 1`] = `
"declare const enum E {
}"
`;

exports[`should return correctly with name, export 1`] = `
"export declare enum E {
}"
`;

exports[`should return correctly with name, export, members 1`] = `
"export declare enum E {
    a = 5,
    b = 6
}"
`;

exports[`should return correctly with name, members 1`] = `
"declare enum E {
    a = 5,
    b = 6,
    c = \\"hello\\"
}"
`;

exports[`should return correctly with numerical member name 1`] = `
"declare enum E {
    0 = 0
}"
`;
